unpackaged/post_comexi/objects/QuoteLineItem/fields/COMEXI_Cost__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Cost__c</fullName>
    <description>Coste unitario de la línea (de CostBookEntry). Base del cálculo de margen de línea.</description>
    <label>Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>