unpackaged/post_comexi/objects/QuoteLineItem/fields/COMEXI_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Margin_Pct__c</fullName>
    <description>Margen de la línea: (NetUnitPrice - Cost) / NetUnitPrice.</description>
    <label>Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>