unpackaged/post_comexi/objects/QuoteLineItem/fields/COMEXI_Target_Margin_Pct__c.field-meta.xml
<CustomField>
    <fullName>COMEXI_Target_Margin_Pct__c</fullName>
    <description>Objetivo de margen de la línea, copiado de Product2.COMEXI_Target_Margin_Pct__c.</description>
    <label>Target Margin %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>